--- a/app/src/main/res/layout/activity_keranjang.xml
+++ b/app/src/main/res/layout/activity_keranjang.xml
@@ -41,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/totalTextView"
-                android:text="Clear Cart" />
+                android:text="Bayar" />
 
         </RelativeLayout>
     </ScrollView>
