--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/appNameTextView"
+        android:background="#F8DFD4"
         android:layout_marginTop="16dp">
 
         <EditText
@@ -46,6 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/usernameTextInputLayout"
+        android:background="#F8DFD4"
         android:layout_marginTop="8dp">
 
         <EditText
@@ -67,15 +69,14 @@
 
     <Button
         android:id="@+id/loginButton"
-        style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/forgotPasswordTextView"
         android:layout_centerInParent="true"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@color/black"
-        android:textColor="@color/white"
-        android:text="Login" />
+        android:backgroundTint="@color/Button1"
+        android:text="Login"
+        android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/registerTextView"
@@ -84,6 +85,7 @@
         android:text="Belum punya akun? Segera daftar disini."
         android:layout_below="@id/loginButton"
         android:layout_centerHorizontal="true"
+        android:background="@drawable/login"
         android:layout_marginTop="16dp"/>
 
 </RelativeLayout>
