--- a/app/src/main/res/layout/activity_add_to_cart.xml
+++ b/app/src/main/res/layout/activity_add_to_cart.xml
@@ -39,4 +39,12 @@
         android:layout_height="wrap_content"
         android:text="Add to Cart"/>
 
+    <ImageView
+        android:id="@+id/secondImage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/addToCartButton"
+        android:src="@drawable/login"
+        android:layout_alignParentBottom="true"/>
+
 </LinearLayout>
