--- a/app/src/main/res/layout/activity_lupa_password.xml
+++ b/app/src/main/res/layout/activity_lupa_password.xml
@@ -40,7 +40,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/passwordInputLayout"
+        android:backgroundTint="@color/Button1"
         android:layout_marginTop="16dp"
         android:text="Update Password"/>
+
+    <ImageView
+        android:id="@+id/secondImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        android:src="@drawable/login"
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
