--- a/app/src/main/res/layout/activity_keranjang.xml
+++ b/app/src/main/res/layout/activity_keranjang.xml
@@ -40,9 +40,18 @@
                 android:id="@+id/clearButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/Button1"
                 android:layout_below="@id/totalTextView"
                 android:text="Bayar" />
 
         </RelativeLayout>
     </ScrollView>
+
+    <ImageView
+        android:id="@+id/secondImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        android:src="@drawable/login"
+        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
