--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -10,7 +10,7 @@
         android:id="@+id/secondImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/bg3"
+        android:src="@drawable/login"
         android:scaleType="centerCrop"
         android:layout_alignParentBottom="true"/>
 
