--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -11,4 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <ImageView
+        android:id="@+id/secondImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        android:src="@drawable/login"
+        android:layout_alignParentBottom="true"/>
+
 </RelativeLayout>
